@@ -1,7 +1,7 @@
 /*
  *  Mathlib : A C Library of Special Functions
  *  Copyright (C) 1998 Ross Ihaka
- *  Copyright (C) 2000 The R Development Core Team
+ *  Copyright (C) 2000--2008 The R Development Core Team
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -31,8 +31,10 @@
 
 double rcauchy(double location, double scale)
 {
-    if (!R_FINITE(location) || !R_FINITE(scale) || scale < 0)
+    if (ISNAN(location) || !R_FINITE(scale) || scale < 0)
         ML_ERR_return_NAN;
-
-    return location + scale * tan(M_PI * unif_rand());
+    if (scale == 0. || !R_FINITE(location))
+        return location;
+    else
+        return location + scale * tan(M_PI * unif_rand());
 }
